--- a/AlteracaoPedidosApp/index.html
+++ b/AlteracaoPedidosApp/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="expires" content="0">
-    <title ng-bind="title">Alteração de Filial - Phito Fórmulas</title>
+    <title ng-bind="title">Alteração de Filial</title>
 
 
     <!-- build:css styles/vendor.css-->
